--- a/index.html
+++ b/index.html
@@ -191,6 +191,23 @@
           </ul>
         </div>
       </section>
+      <section class="section">
+        <div class="container">
+          <h2 class="client-title" lang="pl">Nasi klienci</h2>
+          <ul class="logos-client-list">
+            <li class="logo-client-item">
+              <svg class="logo-client" width="106" height="60.04">
+                <use href="images/icons.svg#icon-astronaut1"></use>
+              </svg>
+            </li>
+            <li class="logo-client-item"></li>
+            <li class="logo-client-item"></li>
+            <li class="logo-client-item"></li>
+            <li class="logo-client-item"></li>
+            <li class="logo-client-item"></li>
+          </ul>
+        </div>
+      </section>
     </main>
     <footer class="bottom">
       <div class="container">
