--- a/index.html
+++ b/index.html
@@ -39,14 +39,23 @@
         </nav>
         <ul class="top-contact-list">
           <li>
-            <a class="top-contact-item" href="mailto:info@devstudio.com"
+            <ul class="envelope-plus-contakt"><li><a class="top-contact-item" href="mailto:info@devstudio.com"><svg class="envelope-smartphon" width="16" height="12">
+            <use href="images/icons.svg#icon-envelope"></use>
+          </svg></a></li><li><a class="top-contact-item" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
-            >
+            ></li>
+            </ul>
           </li>
           <li>
-            <a class="top-contact-item" href="tel:+48111111111"
+            <ul class="smartphon-plus-contakt">
+          <li><a class="top-contact-item" href="tel:+48111111111"><svg class="envelope-smartphon" width="10" height="16">
+            <use href="images/icons.svg#icon-smartphone"></use>
+          </svg></a></li>
+            <li><a class="top-contact-item" href="tel:+48111111111"
               >+48 111 111 111</a
             >
+          </li>
+            </ul>
           </li>
         </ul>
       </div>
@@ -62,6 +71,28 @@
       </section>
       <section class="section">
         <div class="container">
+          <ul class="logos-office-list">
+            <li class="logo-office-item">
+              <svg width="70" height="70">
+                <use href="images/icons.svg#icon-antenna1"></use>
+              </svg>
+            </li>
+            <li class="logo-office-item">
+              <svg width="70" height="70">
+                <use href="images/icons.svg#icon-clock1"></use>
+              </svg>
+            </li>
+            <li class="logo-office-item">
+              <svg width="70" height="70">
+                <use href="images/icons.svg#icon-diagram1"></use>
+              </svg>
+            </li>
+            <li class="logo-office-item">
+              <svg width="70" height="70">
+                <use href="images/icons.svg#icon-astronaut1"></use>
+              </svg>
+            </li>
+          </ul>
           <ul class="descriptions-list">
             <li>
               <h5 class="description-title" lang="la">LOREM IPSUM</h5>
@@ -140,6 +171,19 @@
                 <figcaption>
                   <h4 class="team-name">John Doe</h4>
                   <p class="team-position">Product Designer</p>
+                  <ul class="teamcard-icons-list">
+                    <li class="teamcard-icon-item"><svg class="icon-teamcard" width="20" height="20">
+                    <use href="images/icons.svg#icon-instagram2"></use>
+                  </svg></li>
+                  <li class="teamcard-icon-item"><svg class="icon-teamcard" width="20" height="20">
+                    <use href="images/icons.svg#icon-twitter1"></use>
+                  </svg></li>
+                  <li class="teamcard-icon-item"><svg class="icon-teamcard" width="20" height="20">
+                    <use href="images/icons.svg#icon-facebook1"></use>
+                  </svg></li>
+                  <li class="teamcard-icon-item"><svg class="icon-teamcard" width="20" height="20">
+                    <use href="images/icons.svg#icon-linkedin1"></use>
+                  </svg></li></ul>
                 </figcaption>
               </figure>
             </li>
@@ -155,6 +199,19 @@
                 <figcaption>
                   <h4 class="team-name">John Doe</h4>
                   <p class="team-position">Frontend Developer</p>
+                  <ul class="teamcard-icons-list">
+                    <li class="teamcard-icon-item"><svg class="icon-teamcard" width="20" height="20">
+                    <use href="images/icons.svg#icon-instagram2"></use>
+                  </svg></li>
+                  <li class="teamcard-icon-item"><svg class="icon-teamcard" width="20" height="20">
+                    <use href="images/icons.svg#icon-twitter1"></use>
+                  </svg></li>
+                  <li class="teamcard-icon-item"><svg class="icon-teamcard" width="20" height="20">
+                    <use href="images/icons.svg#icon-facebook1"></use>
+                  </svg></li>
+                  <li class="teamcard-icon-item"><svg class="icon-teamcard" width="20" height="20">
+                    <use href="images/icons.svg#icon-linkedin1"></use>
+                  </svg></li></ul>
                 </figcaption>
               </figure>
             </li>
@@ -170,6 +227,19 @@
                 <figcaption>
                   <h4 class="team-name">John Doe</h4>
                   <p class="team-position">Marketing</p>
+                  <ul class="teamcard-icons-list">
+                    <li class="teamcard-icon-item"><svg class="icon-teamcard" width="20" height="20">
+                    <use href="images/icons.svg#icon-instagram2"></use>
+                  </svg></li>
+                  <li class="teamcard-icon-item"><svg class="icon-teamcard" width="20" height="20">
+                    <use href="images/icons.svg#icon-twitter1"></use>
+                  </svg></li>
+                  <li class="teamcard-icon-item"><svg class="icon-teamcard" width="20" height="20">
+                    <use href="images/icons.svg#icon-facebook1"></use>
+                  </svg></li>
+                  <li class="teamcard-icon-item"><svg class="icon-teamcard" width="20" height="20">
+                    <use href="images/icons.svg#icon-linkedin1"></use>
+                  </svg></li></ul>
                 </figcaption>
               </figure>
             </li>
@@ -185,6 +255,19 @@
                 <figcaption>
                   <h4 class="team-name">John Doe</h4>
                   <p class="team-position">UI Designer</p>
+                  <ul class="teamcard-icons-list">
+                    <li class="teamcard-icon-item"><svg class="icon-teamcard" width="20" height="20">
+                    <use href="images/icons.svg#icon-instagram2"></use>
+                  </svg></li>
+                  <li class="teamcard-icon-item"><svg class="icon-teamcard" width="20" height="20">
+                    <use href="images/icons.svg#icon-twitter1"></use>
+                  </svg></li>
+                  <li class="teamcard-icon-item"><svg class="icon-teamcard" width="20" height="20">
+                    <use href="images/icons.svg#icon-facebook1"></use>
+                  </svg></li>
+                  <li class="teamcard-icon-item"><svg class="icon-teamcard" width="20" height="20">
+                    <use href="images/icons.svg#icon-linkedin1"></use>
+                  </svg></li></ul>
                 </figcaption>
               </figure>
             </li>
@@ -197,20 +280,41 @@
           <ul class="logos-client-list">
             <li class="logo-client-item">
               <svg class="logo-client" width="106" height="60.04">
-                <use href="images/icons.svg#icon-astronaut1"></use>
+                <use href="images/icons.svg#icon-Logo1"></use>
               </svg>
             </li>
-            <li class="logo-client-item"></li>
-            <li class="logo-client-item"></li>
-            <li class="logo-client-item"></li>
-            <li class="logo-client-item"></li>
-            <li class="logo-client-item"></li>
+            <li class="logo-client-item">
+              <svg class="logo-client" width="106" height="60.04">
+                <use href="images/icons.svg#icon-Logo2"></use>
+              </svg>
+            </li>
+            <li class="logo-client-item">
+              <svg class="logo-client" width="106" height="60.04">
+                <use href="images/icons.svg#icon-Logo3"></use>
+              </svg>
+            </li>
+            <li class="logo-client-item">
+              <svg class="logo-client" width="106" height="60.04">
+                <use href="images/icons.svg#icon-Logo"></use>
+              </svg>
+            </li>
+            <li class="logo-client-item">
+              <svg class="logo-client" width="106" height="60.04">
+                <use href="images/icons.svg#icon-Logo4"></use>
+              </svg>
+            </li>
+            <li class="logo-client-item">
+              <svg class="logo-client" width="106" height="60.04">
+                <use href="images/icons.svg#icon-Logo5"></use>
+              </svg>
+            </li>
           </ul>
         </div>
       </section>
     </main>
     <footer class="bottom">
-      <div class="container">
+      <div class="bottom-container container">
+        <div class="bottom-contacts-container">
         <h3 class="bottom-logo" lang="pl">
           <span class="logo-blue">Web</span>Studio
         </h3>
@@ -229,6 +333,23 @@
             >
           </li>
         </ul>
+      </div>
+      <div>
+        <p class="coment">Dołącz do nas</p>
+        <ul class="bottom-icons-list">
+          <li class="bottom-icon-item"><svg class="icon-bottom" width="20" height="20">
+          <use href="images/icons.svg#icon-instagram2"></use>
+        </svg></li>
+        <li class="bottom-icon-item"><svg class="icon-bottom" width="20" height="20">
+          <use href="images/icons.svg#icon-twitter1"></use>
+        </svg></li>
+        <li class="bottom-icon-item"><svg class="icon-bottom" width="20" height="20">
+          <use href="images/icons.svg#icon-facebook1"></use>
+        </svg></li>
+        <li class="bottom-icon-item"><svg class="icon-bottom" width="20" height="20">
+          <use href="images/icons.svg#icon-linkedin1"></use>
+        </svg></li></ul>
+      </div>
       </div>
     </footer>
   </body>
