--- a/portfolio.html
+++ b/portfolio.html
@@ -28,9 +28,7 @@
         >
         <nav class="nav">
           <menu class="nav-list">
-            <li>
-              <a class="nav-item" href="index.html" lang="pl">Agencja</a>
-            </li>
+            <li><a class="nav-item" href="index.html" lang="pl">Agencja</a></li>
             <li>
               <a class="nav-item" href="portfolio.html" lang="pl">Portfolio</a>
             </li>
@@ -41,14 +39,23 @@
         </nav>
         <ul class="top-contact-list">
           <li>
-            <a class="top-contact-item" href="mailto:info@devstudio.com"
+            <ul class="envelope-plus-contakt"><li><a class="top-contact-item" href="mailto:info@devstudio.com"><svg class="envelope-smartphon" width="16" height="12">
+            <use href="images/icons.svg#icon-envelope"></use>
+          </svg></a></li><li><a class="top-contact-item" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
-            >
+            ></li>
+            </ul>
           </li>
           <li>
-            <a class="top-contact-item" href="tel:+48111111111"
+            <ul class="smartphon-plus-contakt">
+          <li><a class="top-contact-item" href="tel:+48111111111"><svg class="envelope-smartphon" width="10" height="16">
+            <use href="images/icons.svg#icon-smartphone"></use>
+          </svg></a></li>
+            <li><a class="top-contact-item" href="tel:+48111111111"
               >+48 111 111 111</a
             >
+          </li>
+            </ul>
           </li>
         </ul>
       </div>
@@ -244,7 +251,8 @@
       </section>
     </main>
     <footer class="bottom">
-      <div class="container">
+      <div class="bottom-container container">
+        <div class="bottom-contacts-container">
         <h3 class="bottom-logo" lang="pl">
           <span class="logo-blue">Web</span>Studio
         </h3>
@@ -263,6 +271,23 @@
             >
           </li>
         </ul>
+      </div>
+      <div>
+        <p class="coment">Dołącz do nas</p>
+        <ul class="bottom-icons-list">
+          <li class="bottom-icon-item"><svg class="icon-bottom" width="20" height="20">
+          <use href="images/icons.svg#icon-instagram2"></use>
+        </svg></li>
+        <li class="bottom-icon-item"><svg class="icon-bottom" width="20" height="20">
+          <use href="images/icons.svg#icon-twitter1"></use>
+        </svg></li>
+        <li class="bottom-icon-item"><svg class="icon-bottom" width="20" height="20">
+          <use href="images/icons.svg#icon-facebook1"></use>
+        </svg></li>
+        <li class="bottom-icon-item"><svg class="icon-bottom" width="20" height="20">
+          <use href="images/icons.svg#icon-linkedin1"></use>
+        </svg></li></ul>
+      </div>
       </div>
     </footer>
   </body>
