--- a/portfolio.html
+++ b/portfolio.html
@@ -38,25 +38,20 @@
           </menu>
         </nav>
         <ul class="top-contact-list">
-          <li>
-            <ul class="envelope-plus-contakt"><li><a class="top-contact-item" href="mailto:info@devstudio.com"><svg class="envelope-smartphon" width="16" height="12">
+          <li class="envelope-plus-contakt">
+            <a class="top-contact-item" href="mailto:info@devstudio.com"><svg class="envelope-smartphon" width="16" height="12">
             <use href="images/icons.svg#icon-envelope"></use>
-          </svg></a></li><li><a class="top-contact-item" href="mailto:info@devstudio.com"
+          </svg></a>
+          <a class="top-contact-item" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             ></li>
-            </ul>
-          </li>
-          <li>
-            <ul class="smartphon-plus-contakt">
-          <li><a class="top-contact-item" href="tel:+48111111111"><svg class="envelope-smartphon" width="10" height="16">
+          <li class="smartphon-plus-contakt">
+          <a class="top-contact-item" href="tel:+48111111111"><svg class="envelope-smartphon" width="10" height="16">
             <use href="images/icons.svg#icon-smartphone"></use>
-          </svg></a></li>
-            <li><a class="top-contact-item" href="tel:+48111111111"
+          </svg></a>
+            <a class="top-contact-item" href="tel:+48111111111"
               >+48 111 111 111</a
-            >
-          </li>
-            </ul>
-          </li>
+            ></li>
         </ul>
       </div>
     </header>
