--- a/portfolio.html
+++ b/portfolio.html
@@ -38,20 +38,18 @@
           </menu>
         </nav>
         <ul class="top-contact-list">
-          <li class="envelope-plus-contakt">
-            <a class="top-contact-item" href="mailto:info@devstudio.com"><svg class="envelope-smartphon" width="16" height="12">
-            <use href="images/icons.svg#icon-envelope"></use>
-          </svg></a>
-          <a class="top-contact-item" href="mailto:info@devstudio.com"
+          <li class="envelope-plus-contakt"><a href="mailto:info@devstudio.com"
+              ><svg class="envelope-smartphon" width="16" height="12">
+                <use href="images/icons.svg#icon-envelope"></use></svg></a><a class="top-contact-item" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
-            ></li>
-          <li class="smartphon-plus-contakt">
-          <a class="top-contact-item" href="tel:+48111111111"><svg class="envelope-smartphon" width="10" height="16">
-            <use href="images/icons.svg#icon-smartphone"></use>
-          </svg></a>
-            <a class="top-contact-item" href="tel:+48111111111"
+            >
+          </li>
+          <li class="smartphon-plus-contakt"><a href="tel:+48111111111"
+              ><svg class="envelope-smartphon" width="10" height="16">
+                <use href="images/icons.svg#icon-smartphone"></use></svg></a><a class="top-contact-item" href="tel:+48111111111"
               >+48 111 111 111</a
-            ></li>
+            >
+          </li>
         </ul>
       </div>
     </header>
@@ -248,41 +246,50 @@
     <footer class="bottom">
       <div class="bottom-container container">
         <div class="bottom-contacts-container">
-        <h3 class="bottom-logo" lang="pl">
-          <span class="logo-blue">Web</span>Studio
-        </h3>
-        <address class="bottom-adress" lang="pl">
-          m. Warszawa, Aleje Jerozolimskie 21
-        </address>
-        <ul class="bottom-contact-list">
-          <li>
-            <a class="bottom-contact-item" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="bottom-contact-item" href="tel:+48111111111"
-              >+48 111 111 111</a
-            >
-          </li>
-        </ul>
-      </div>
-      <div>
-        <p class="coment">Dołącz do nas</p>
-        <ul class="bottom-icons-list">
-          <li class="bottom-icon-item"><svg class="icon-bottom" width="20" height="20">
-          <use href="images/icons.svg#icon-instagram2"></use>
-        </svg></li>
-        <li class="bottom-icon-item"><svg class="icon-bottom" width="20" height="20">
-          <use href="images/icons.svg#icon-twitter1"></use>
-        </svg></li>
-        <li class="bottom-icon-item"><svg class="icon-bottom" width="20" height="20">
-          <use href="images/icons.svg#icon-facebook1"></use>
-        </svg></li>
-        <li class="bottom-icon-item"><svg class="icon-bottom" width="20" height="20">
-          <use href="images/icons.svg#icon-linkedin1"></use>
-        </svg></li></ul>
-      </div>
+          <h3 class="bottom-logo" lang="pl">
+            <span class="logo-blue">Web</span>Studio
+          </h3>
+          <address class="bottom-adress" lang="pl">
+            m. Warszawa, Aleje Jerozolimskie 21
+          </address>
+          <ul class="bottom-contact-list">
+            <li>
+              <a class="bottom-contact-item" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="bottom-contact-item" href="tel:+48111111111"
+                >+48 111 111 111</a
+              >
+            </li>
+          </ul>
+        </div>
+        <div>
+          <p class="coment">Dołącz do nas</p>
+          <ul class="bottom-icons-list">
+            <li class="bottom-icon-item">
+              <svg class="icon-bottom" width="20" height="20">
+                <use href="images/icons.svg#icon-instagram2"></use>
+              </svg>
+            </li>
+            <li class="bottom-icon-item">
+              <svg class="icon-bottom" width="20" height="20">
+                <use href="images/icons.svg#icon-twitter1"></use>
+              </svg>
+            </li>
+            <li class="bottom-icon-item">
+              <svg class="icon-bottom" width="20" height="20">
+                <use href="images/icons.svg#icon-facebook1"></use>
+              </svg>
+            </li>
+            <li class="bottom-icon-item">
+              <svg class="icon-bottom" width="20" height="20">
+                <use href="images/icons.svg#icon-linkedin1"></use>
+              </svg>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
