--- a/portfolio.html
+++ b/portfolio.html
@@ -38,15 +38,19 @@
           </menu>
         </nav>
         <ul class="top-contact-list">
-          <li class="envelope-plus-contakt"><a href="mailto:info@devstudio.com"
+          <li class="envelope-plus-contakt">
+            <a href="mailto:info@devstudio.com"
               ><svg class="envelope-smartphon" width="16" height="12">
-                <use href="images/icons.svg#icon-envelope"></use></svg></a><a class="top-contact-item" href="mailto:info@devstudio.com"
+                <use href="images/icons.svg#icon-envelope"></use></svg></a
+            ><a class="top-contact-item" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
-          <li class="smartphon-plus-contakt"><a href="tel:+48111111111"
+          <li class="smartphon-plus-contakt">
+            <a href="tel:+48111111111"
               ><svg class="envelope-smartphon" width="10" height="16">
-                <use href="images/icons.svg#icon-smartphone"></use></svg></a><a class="top-contact-item" href="tel:+48111111111"
+                <use href="images/icons.svg#icon-smartphone"></use></svg></a
+            ><a class="top-contact-item" href="tel:+48111111111"
               >+48 111 111 111</a
             >
           </li>
